# bmcppfit

./: .gitignore  BMS.h  BMSimFit.h  BMSim_T.h  BlochMatrix.h  BlochMcConnellSolver.h  CMakeLists.txt  LICENSE  NLSFit.h  Readme.md  SimulationParameters.cpp  SimulationParameters.h  YamlIO.h  main.cpp  vcpkg.json
.github/workflows/: build.yml  docker_ci.yml
doc/: Readme.md
docker/: Dockerfile
in/: params.yaml  params_pulseq_fit.yaml  result.yaml  seq.seq
src/: BMSimFit.cpp  BMSimFit.h  BMSim_T.h  BlochMcConnellSolver.h  NLSFit.h  SimulationParameters.cpp  SimulationParameters.h  YamlIO.h  YamlParser.cpp  YamlParser.h  main.cpp
tests/matlab/: APTw_3T_003_2uT_8block_DC95_834ms_braintumor.seq  FP_GM_3T_001_bmcppfit.yaml  GM_3T_001_bmcppfit.yaml  Readme.md  Test_bmcppfit.m  runFitTest.m  yaml_fit.yaml
tests/matlab/results/: GM_3T_001_bmcppfit_before_fit.yaml  GM_3T_001_bmcppfit_fitted.yaml  ceres_fit_options.yaml  fit_results.yaml  yaml_fit.yaml
